--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </section>
             <section class="sec sc">
                 <div class="estimate">
-                    <h2>estimate</h2>
+                    <h2>Estimate</h2>
                 </div>
                 <div class="inner con">
 
